crates/oxc_linter/src/snapshots/jsdoc_no_types@contexts_and_multiline_types.snap
---
source: crates/oxc_linter/src/tester.rs
assertion_line: 505
---

  ⚠ jsdoc(no-types): Types are not permitted on `@param`.
   ╭─[no_types.tsx:1:30]
 1 │ declare class C { /** @param {number} x */ f(x: number): void; }
   ·                              ────────
   ╰────
  help: Remove the JSDoc type annotation.

  ⚠ jsdoc(no-types): Types are not permitted on `@param`.
   ╭─[no_types.tsx:1:22]
 1 │ class C { /** @param {number} x */ f(x: number): number; f(x: number) { return x; } }
   ·                      ────────
   ╰────
  help: Remove the JSDoc type annotation.

  ⚠ jsdoc(no-types): Types are not permitted on `@param`.
   ╭─[no_types.tsx:1:12]
 1 │ /** @param {number} x */ const f = ((x => x));
   ·            ────────
   ╰────
  help: Remove the JSDoc type annotation.

  ⚠ jsdoc(no-types): Types are not permitted on `@param`.
   ╭─[no_types.tsx:1:12]
 1 │ /** @param {number} x */ export const f = (function(x) {});
   ·            ────────
   ╰────
  help: Remove the JSDoc type annotation.

  ⚠ jsdoc(no-types): Types are not permitted on `@param`.
   ╭─[no_types.tsx:1:12]
 1 │ /** @param {number} x */ const callbacks = [x => x], f = x => x;
   ·            ────────
   ╰────
  help: Remove the JSDoc type annotation.

  ⚠ jsdoc(no-types): Types are not permitted on `@param`.
   ╭─[no_types.tsx:1:12]
 1 │ /** @param {number} x */ export const callbacks = [x => x], f = function(x) {};
   ·            ────────
   ╰────
  help: Remove the JSDoc type annotation.

  ⚠ jsdoc(no-types): Types are not permitted on `@param`.
   ╭─[no_types.tsx:2:11]
 1 │ /** @function
 2 │  * @param {number} x */ const callbacks = [x => x];
   ·           ────────
   ╰────
  help: Remove the JSDoc type annotation.

  ⚠ jsdoc(no-types): Types are not permitted on `@param`.
   ╭─[no_types.tsx:3:4]
 2 │  * @param
 3 │  * {number} x
   ·    ────────
 4 │  */
   ╰────
  help: Remove the JSDoc type annotation.

  ⚠ jsdoc(no-types): Types are not permitted on `@returns`.
   ╭─[no_types.tsx:3:4]
 2 │  * @returns
 3 │  * {number} The result.
   ·    ────────
 4 │  */
   ╰────
  help: Remove the JSDoc type annotation.

  ⚠ jsdoc(no-types): Types are not permitted on `@property`.
   ╭─[no_types.tsx:3:4]
 2 │  * @property
 3 │  * {number} x
   ·    ────────
 4 │  */
   ╰────
  help: Remove the JSDoc type annotation.

  ⚠ jsdoc(no-types): Types are not permitted on `@param`.
   ╭─[no_types.tsx:3:4]
 2 │  * @param
 3 │  * {number} x
   ·    ────────
 4 │  */
   ╰────
  help: Remove the JSDoc type annotation.

  ⚠ jsdoc(no-types): Types are not permitted on `@param`.
   ╭─[no_types.tsx:4:4]
 3 │  *
 4 │  * {number} x
   ·    ────────
 5 │  */
   ╰────
  help: Remove the JSDoc type annotation.

  ⚠ jsdoc(no-types): Types are not permitted on `@param`.
   ╭─[no_types.tsx:3:2]
 2 │  * @param
 3 │  {number} x
   ·  ────────
 4 │  */
   ╰────
  help: Remove the JSDoc type annotation.
